# Product-comparison-

./: .env.example  .gitignore  CLAUDE.md  README.md  WORKLOG.md  package-lock.json  package.json  product_names.csv  tsconfig.json
api/: .env.example  .gitignore  README.md  pyproject.toml
api/app/: db.py  dk_admin.py  insights.py  main.py  pipeline.py  registry.py  run_store.py  scheduler.py  schemas.py  serp.py  settings.py
api/app/matching/: attributes.py  dk_catalog.py  embed.py  gates.py  index.py  llm_judge.py  normalize.py  query_builder.py  score.py  structured.py  tokens.py  triage.py  variant_spec.py
api/app/routes/: compare.py  feedback.py  golden.py  insights.py  match.py  reviews.py  runs.py  serp.py  test_ui.py
api/app/scrapers/: bridge.py
api/app/static/: index.html
api/bridges/: scrape-competitor.ts  scrape-server.ts
api/migrations/: env.py
api/migrations/versions/: 0001_init_catalog.py  0002_match_feedback.py  0003_match_registry.py
api/scripts/: build_catalog_index.py  build_dk_catalog.py  dump_ts_verdicts.ts  eval.py
api/tests/: test_bridge_fetch.py  test_build_catalog.py  test_db.py  test_health.py  test_registry.py  test_schemas.py  test_settings.py
api/tests/matching/: test_attributes.py  test_embed.py  test_gates.py  test_index.py  test_llm_judge.py  test_normalize.py  test_pipeline_band.py  test_query_builder.py  test_regression_cases.py  test_score.py  test_structured.py  test_tokens.py  test_triage.py
api/tests/parity/: test_parity_ts.py
api/tests/routes/: test_compare_route.py  test_feedback_route.py  test_match_route.py  (+1 more)
(+19 files in other folders)
