[project]
name = "product-compare-api"
version = "0.1.0"
description = "FastAPI service for product matching, scraping, and comparison."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi[standard]>=0.115",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "asyncpg>=0.30",
  "pgvector>=0.3.6",
  "alembic>=1.13",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "sentence-transformers>=3.2",
  "rapidfuzz>=3.10",
  "structlog>=24.4",
  "httpx>=0.27",
  "uvicorn[standard]>=0.32",
  "openpyxl>=3.1.5",
  "pandas>=3.0.3",
  "anthropic>=0.92",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "mypy>=1.13",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"app/matching/normalize.py" = ["RUF001"]  # intentional em/en-dash chars in regex

[[tool.mypy.overrides]]
module = ["asyncpg.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
